<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kd</groupId>
    <artifactId>misc-graphics</artifactId>
    <version>1.0</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <gdx.version>1.10.0</gdx.version>
    </properties>

    <dependencies>
        <!-- Core library -->
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx</artifactId>
            <version>${gdx.version}</version>
        </dependency>
        <!-- Platform-specific backend for desktop -->
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-backend-lwjgl</artifactId>
            <version>${gdx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-freetype</artifactId>
            <version>${gdx.version}</version>
            <!--<classifier>natives-windows64</classifier>-->
        </dependency>
        <!-- Optional: Platform-specific extensions like gdx-platform -->
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-platform</artifactId>
            <version>${gdx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-box2d</artifactId>
            <version>${gdx.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <!--<mainClass>org.kd.xmas25.CommodoreXmas</mainClass>-->
                                    <!--<mainClass>org.kd.anniversaries.AnniversariesDemo</mainClass>-->
                                    <!--<mainClass>org.kd.win311.Win311Demo</mainClass>-->
                                    <!--<mainClass>org.kd.winter25.WinterDemo</mainClass>-->
                                    <mainClass>org.kd.goodjob.GoodJobMrJobs</mainClass>
                                    <!--<mainClass>org.kd.kickass.KickassDemo</mainClass>-->
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <!--<directory>C:\Users\jerzy\IdeaProjects\misc-graphics\java\src\main\resources</directory>-->
                <directory>d:/code/misc-graphics/java/src/main/resources</directory>
                <excludes>
                    <!-- Remember to use mvn clean before mvn package to get rid of unwanted files->
                    <exclude>dream210/**</exclude>
                    <exclude>win311/**</exclude>
                    <exclude>fake-demo/**</exclude>
                    <exclude>hellogdx/**</exclude>
                    <exclude>anniversaries/**</exclude>
                    <exclude>anniversaries27/**</exclude>
                    <exclude>anniversaries28/**</exclude>
                    <exclude>anniversaries29/**</exclude>
                    <exclude>anniversaries30/**</exclude>
                    <exclude>bkg/**</exclude>
                    <exclude>kickass/**</exclude>
                    <exclude>winter/**</exclude>
                    <exclude>stickfighters/**</exclude>
                    <exclude>spritesheets/**</exclude>
                    <!-<exclude>good-job/**</exclude>-->

                </excludes>
            </resource>
        </resources>
    </build>
</project>
